# ludus

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: board-images.yml  publish-wiki.yml  release.yml
docker/: frontend.Dockerfile
docs/: alt-interface.md  architettura.md
fixtures/golden/: architect-breakdown-login.json
fixtures/stories/: login.md
frontend/: nginx.conf  package-lock.json  vite.config.ts
frontend/src/: main.tsx  styles.css
plugin/: .mcp.json
plugin/commands/: ludus-runs.md  ludus-scenarios.md
scenarios/architect/: breakdown-login.yaml
src/ludus/: aggregate.py  cli.py  gate.py  harness.py  models.py  report.py  scenario.py
src/ludus/adapters/: __init__.py  base.py  mock.py  single_subagent.py
src/ludus/evaluators/: __init__.py  base.py  deterministic.py  llm_judge.py
src/ludus/mcp/: __init__.py
src/ludus/server/: config.py  db_models.py  main.py
src/ludus/server/routers/: __init__.py  runs.py
tests/: test_cli.py  test_evaluators.py  test_harness.py  test_models.py  test_report.py  test_scenario.py
wiki/: Adapters.md  Architecture.md  Build-vs-Buy.md  Evaluators.md  Home.md  M1-Analysis.md  Open-Questions.md  Roadmap.md  Scenario-Format.md  Vocabulary.md
