[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ludus"
version = "0.1.0"
description = "Ludus AI — framework for testing and evaluating AI systems"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.28",
]
level-a = [
    "anthropic>=0.28",
    "claude-agent-sdk>=0.0.1",
]
# Backend REST API (FastAPI + SQLModel/SQLite). See src/ludus/server/.
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "httpx>=0.27",
]
# MCP server exposing the backend over streamable HTTP. See src/ludus/mcp/.
mcp = [
    "mcp>=1.2",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
ludus = "ludus.cli:main"
ludus-server = "ludus.server.main:run"
ludus-mcp = "ludus.mcp.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/ludus"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection idiom: these calls in argument defaults are safe.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (requires live services)",
    "live: marks tests that require ANTHROPIC_API_KEY",
]
